[gd_scene load_steps=4 format=3 uid="uid://ccktlv7tnl25j"]

[ext_resource type="Texture2D" uid="uid://b8hyvo1cpeq87" path="res://assets/art/blue.png" id="1_41eu6"]
[ext_resource type="Script" path="res://scripts/items/bullet.gd" id="1_w520q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7jlog"]
radius = 20.0
height = 60.0

[node name="Bullet" type="CharacterBody2D" groups=["damage_source"]]
z_index = 5
script = ExtResource("1_w520q")

[node name="Area2D" type="Area2D" parent="." groups=["damage_source"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(0.2, 0.2)
shape = SubResource("CapsuleShape2D_7jlog")

[node name="TemporarySprite" type="Sprite2D" parent="."]
position = Vector2(3.55271e-15, 6)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_41eu6")

[node name="DecayTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_decay_timer_timeout"]
